--- a/reactor-demo/pom.xml
+++ b/reactor-demo/pom.xml
@@ -26,12 +26,25 @@
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
-
         </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+<!--        https://github.com/dexecutor/dexecutor-core-->
+        <dependency>
+            <groupId>com.github.dexecutor</groupId>
+            <artifactId>dexecutor-core</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+
+<!--        https://github.com/avivcarmis/java-red-->
+        <dependency>
+            <groupId>io.github.avivcarmis</groupId>
+            <artifactId>java-red</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
