--- a/spring3-demos/pom.xml
+++ b/spring3-demos/pom.xml
@@ -92,7 +92,10 @@
             <version>2.5</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
