--- a/aviator-demo/pom.xml
+++ b/aviator-demo/pom.xml
@@ -34,5 +34,9 @@
             <artifactId>lombok</artifactId>
             <version>1.18.18</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 </project>
