--- a/java-lang-demos/pom.xml
+++ b/java-lang-demos/pom.xml
@@ -141,6 +141,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <!-- Original answer -->
+                    <compilerArgument>-parameters</compilerArgument>
+                    <!-- Or, if you use the plugin version >= 3.6.2 -->
+<!--                    <parameters>true</parameters>-->
+                    <testCompilerArgument>-parameters</testCompilerArgument>
                     <source>8</source>
                     <target>8</target>
                 </configuration>
